--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.0.18",
+    "@tabler/icons-react": "^3.4.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-table": "^8.17.3",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "framer-motion": "^11.2.4",
     "next": "^14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
